--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body style=" background-color: #0f0f0f;">
+<body>
     <div class="container">
         <div class="header">
             <div class="headerpart1">
                 <img class="youtublogo" src="assets/youtublogo.png" alt="youtublogo">
-
             </div>
             <div class="headerpart2">
                 <input type="text" class="search" placeholder="search">
@@ -33,7 +32,7 @@
         <hr>
 
 
-        <div class="content ">
+        <section class="content ">
             <div class="videoPart">
                 <iframe class="youtubembededVideo" style="width: 560px; height: 315px;"
                     src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -95,7 +94,7 @@
             </div>
 
 
-        </div>
+        </section>
 
 
     </div>
